--- a/style.css
+++ b/style.css
@@ -134,8 +134,8 @@ h3 {
 
 .sharecontainer {
     display:none;
-   grid-template-columns: 32% 15% 15% 15% 23%;
-   position:absolute;
+    grid-template-columns: 32% 15% 15% 15% 23%;
+    position:absolute;
     align-items: center;
     width: 100%;
     height: 100%;
@@ -143,6 +143,15 @@ h3 {
     background-color: hsl(217, 19%, 35%);
     border-radius: 0 0 0.8em 0.8em;
     z-index: 2;
+
+    animation-name: sharecontaineranime;
+    animation-duration: 0.5s;
+    
+}
+@keyframes sharecontaineranime {
+    
+    from {height: 0px; bottom: 0;   transform: scaleX(0);}
+    to {height: 100%; transform: scaleX(1)}
 }
 
 h4 {
@@ -151,13 +160,33 @@ h4 {
     font-weight: 400;
     letter-spacing: 4.5px;
     color:hsl(212, 23%, 69%);
-}
+
+    animation-name: hanime;
+    animation-duration: 3s;
+    }
+    
+    @keyframes hanime {
+    
+    from {font-size: 0px; bottom: 0;}
+    to {font-size: 13px;}
+    }
 .icons {
     width: 50%;
     height: auto;
     max-width: 25px;
     cursor: pointer;
+
+animation-name: iconsanime;
+animation-duration: 1s;
 }
+
+@keyframes iconsanime {
+
+from {transform: scaleX(0);}
+to { transform: scaleX(1);}
+}
+
+
 .icons:nth-of-type(1):link,
 .icons:nth-of-type(1):visited,
 .icons:nth-of-type(1):active ,
@@ -229,6 +258,8 @@ section {
     position: relative;
     bottom: 70px;
     right: 150px;
+
+    animation-duration: 1s;
     }
 
     .icons {width: 20px;}
@@ -239,13 +270,24 @@ section {
 	height: 0;
 	border-left: 10px solid transparent;
 	border-right: 10px solid transparent;
-	border-top: 10px solid hsl(217, 19%, 35%);
+	border-top: 18px solid hsl(217, 19%, 35%);
     position: relative;
     bottom: 38px;
     right: 274px;
+    
+animation-name: triangleanime;
+animation-duration: 1s;
 }
 
+
+@keyframes triangleanime {
+from {bottom: 0; transform: scaleX(0);}
+to { transform: scaleX(1);}
+}
 }
 @media screen and (max-width: 335px) {
     main {width: 98%;}
 }
+
+
+
